--- a/Pagos/pom.xml
+++ b/Pagos/pom.xml
@@ -16,7 +16,7 @@
     <repository>
       <id>guvnor-m2-repo</id>
       <name>Guvnor M2 Repo</name>
-      <url>http://localhost:8080/drools-wb/maven2/</url>
+      <url>http://localhost/maven2/</url>
     </repository>
   </repositories>
   <build>
