--- a/Envios/pom.xml
+++ b/Envios/pom.xml
@@ -16,7 +16,7 @@
     <repository>
       <id>guvnor-m2-repo</id>
       <name>Guvnor M2 Repo</name>
-      <url>http://ec2-54-159-198-199.compute-1.amazonaws.com/drools-wb/maven2/</url>
+      <url>http://localhost/maven2/</url>
     </repository>
   </repositories>
   <build>
