--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <repository>
       <id>guvnor-m2-repo</id>
       <name>Guvnor M2 Repo</name>
-      <url>file:///opt/jboss/wildfly/bin/repositories/kie</url>
+      <url>file:///Users/sstorti/Drools/wildfly-10.1.0.Final/bin/repositories/kie</url>
     </repository>
   </repositories>
 </project>
